added rank, request top ranked, login fixed and stuff
