# api/swagger.json
@@ -49,6 +49,30 @@
         }
       }
     },
+    "/user/top": {
+      "get": {
+        "tags": [
+          "user"
+        ],
+        "description": "Get top users",
+        "parameters": [
+          {
+            "name": "limit",
+            "description": "Max number of users returned",
+            "type": "integer",
+            "required": false
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Successful operation",
+            "schema": {
+              "$ref": "#/definitions/TopResponse"
+            }
+          }
+        }
+      }
+    },
     "/session": {
       "get": {
         "tags": [
@@ -143,6 +167,23 @@
       "properties": {
         "login": {
           "type": "string"
+        }
+      }
+    },
+    "TopResponse": {
+      "type": "array",
+      "items": {
+        "$ref": "#/definitions/LoginAndRank"
+      }
+    },
+    "LoginAndRank": {
+      "type": "object",
+      "properties": {
+        "login": {
+          "type": "string"
+        },
+        "rank": {
+          "type": "integer"
         }
       }
     }
